fixed social media icons spacing and added hover feature

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,74 +12,82 @@ body.fade-out {
 }
 
 a {
-	text-decoration:none;
+	text-decoration: none;
 }
 
 #header-with-logo {
-	height:35vh;
-	width:100%;
+	height: 35vh;
+	width: 100%;
 }
 
 img.header-logo {
-	padding-top:15vh;
-	width:100%;
+	padding-top: 20vh;
+	width: 100%;
 }
 
 #everything-else {
-	padding:1%;
+	padding: 1%;
 	font-family: 'Francois One', sans-serif;
-	text-align:center;
-	font-size:170%;
-	color:white;
+	text-align: center;
+	font-size: 130%;
+	color: white;
+	margin-top: 120px;
 }
 
 span.name {
-	font-size:150%;
+	font-size: 150%;
 	text-shadow: 0px 5px 10px rgba(0, 0, 0, .5);
+	padding-top: 10%;
 }
 
 span.title {
- color:#e7e7e7;
+	color: #e7e7e7;
 }
 
 address a {
-	text-decoration:none;
-	font-style:normal;
-	color:white;
+	text-decoration: none;
+	font-style: normal;
+	color: white;
 }
 
 .social {
-	width:400px;
-	height:auto;
-	margin:auto;
-	text-shadow: 0px 5px 10px rgba(0, 0, 0, .5);
+	width: 300px;
+	height: auto;
+	margin: auto;
 }
 
 .linkedin {
-float:left;
-width:45%;
-
+	float: left;
+	width: 45%;
+	margin: 0px;
 }
 
 .linkedin img {
-width:60%;
+	width: 60%;
+	margin-top: 23px;
+	padding-left: 53px; 
 }
 
 .behance {
-float:right;
-width:45%;
-
+	float: left;
+	width: 45%;
+	margin: 0px;
 }
 
 .behance img {
-width:60%;
+	width: 60%;
+	margin-left: 0px;
+	margin-top: 25px;
+	padding-right: 30px;
 }
+
 .rule {
-	width:1px;
-	height:50px;
-	background-color:#5a5a5a;
-	float:left;
-	margin-left:20px;
+	width: 1px;
+	height: 50px;
+	background-color: #5a5a5a;
+	float: left;
+	margin-left: 10px;
+	margin-top: 10px;
 }
 
 /*Highlight color */
@@ -91,3 +99,12 @@ width:60%;
 	background: red; 
 }
 /*End Highlight color*/
+
+.behance img:hover {
+   opacity: 0.6;
+   filter: alpha(opacity=60); 
+ }
+ .linkedin img:hover {
+   opacity: 0.6;
+   filter: alpha(opacity=60); 
+ }
